[gd_scene load_steps=12 format=2]

[ext_resource path="res://Floob.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Pipe.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/RobotoMono-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Floor.tscn" type="PackedScene" id=5]
[ext_resource path="res://StartMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/tapguid.png" type="Texture" id=7]
[ext_resource path="res://DeathMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://Background.tscn" type="PackedScene" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 2762.78, 287.105, 0, 0, 0, 0, 2762.68, 857.67 )
}

[sub_resource type="DynamicFont" id=2]
size = 120
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Main" type="Node"]
script = ExtResource( 2 )
Pipe = ExtResource( 3 )

[node name="PipePath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PipeSpawnLocation" type="PathFollow2D" parent="PipePath"]
position = Vector2( 2762.78, 287.105 )
rotation = 1.57092

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="Floob" parent="." instance=ExtResource( 1 )]
position = Vector2( 200, 640 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="HUD"]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TapGuide" type="TextureRect" parent="HUD"]
anchor_left = 0.407
anchor_top = 0.685
anchor_right = 0.407
anchor_bottom = 0.733
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="HUD/TapGuide"]

[node name="Flash" type="CanvasLayer" parent="."]
layer = 100

[node name="White" type="ColorRect" parent="Flash"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.77551
margin_right = -3.77551
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Flash"]

[node name="Transition" type="CanvasLayer" parent="."]
layer = 100

[node name="Black" type="ColorRect" parent="Transition"]
modulate = Color( 0, 0, 0, 0 )
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Transition"]

[node name="Floor" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 1150 )
z_index = 4

[node name="StartMenu" parent="." instance=ExtResource( 6 )]
layer = 101

[node name="DeathMenu" parent="." instance=ExtResource( 8 )]
layer = 101

[node name="Background" parent="." instance=ExtResource( 9 )]
layer = -1

[connection signal="timeout" from="PipeTimer" to="." method="_on_PipeTimer_timeout"]
[connection signal="first_flap" from="Floob" to="." method="_on_Floob_first_flap"]
[connection signal="hit" from="Floob" to="." method="_on_Floob_hit"]
[connection signal="start" from="StartMenu" to="." method="_on_StartMenu_start"]
[connection signal="start" from="DeathMenu" to="." method="_on_DeathMenu_start"]
